--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-PORT = 8080
-MONGO_URI = mongodb://localhost:27017
+PORT = ****
+MONGO_URI = mongodb://localhost:****
 JWT_SECRET_KEY = ayushashutoshpanda                                                     
 // you can random string in JWT_SECRET_KEY
